--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(enginetest)
 
 set (VERSION_MAJOR 1)
 set (VERSION_MINOR 0)
+set (VERSION_PATCH 0)
 
 include_directories ("${PROJECT_SOURCE_DIR}/cxxtest")
 
 add_subdirectory (src) 
-# target_link_libraries (enginetest gameengine)
