Adding a bit of tested functionality to sprite.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,25 @@ add_library(gameengine
 set(test_headers
 	spritetest.cpp)
 
+find_package(SDL)
+find_package(SDL_image)
+find_package(SDL_ttf)
+
+if(SDL_FOUND)
+	include_directories(${SDL_INCLUDE_DIR})
+	target_link_libraries(gameengine ${SDL_LIBRARY})
+endif()
+
+if(SDLIMAGE_FOUND)
+	include_directories(${SDLIMAGE_INCLUDE_DIR})
+	target_link_libraries(gameengine ${SDLIMAGE_LIBRARY})
+endif()
+
+if(SDLTTF_FOUND)
+	include_directories(${SDLTTF_INCLUDE_DIR})
+	target_link_libraries(gameengine ${SDLTTF_LIBRARY})
+endif()
+
 set(CXXTEST_USE_PYTHON true)
 find_package(CxxTest)
 
@@ -17,6 +36,6 @@ if(CXXTEST_FOUND)
 	include_directories(${CXXTEST_INCLUDE_DIR})
 	enable_testing()
 	CXXTEST_ADD_TEST(enginetest tests.cpp 
-		spritetest.h)
-	
+	 	spritetest.h)
+	target_link_libraries(enginetest gameengine)
 endif()
