Implemented the drawing of moving sprites onto the screen.
Also introducing the logger class, to log to the debug.log file
to ease up on the use of cout as a debugging tool.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(gameengine
 	gui.cpp gui.h
 	image.cpp image.h
 	keyevent.cpp keyevent.h
+	logger.cpp logger.h
 	mouseevent.cpp mouseevent.h
 	resource.cpp resource.h
 	sdl.h 
