Added projectile class.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,8 @@ set(test_headers
 	${CMAKE_CURRENT_SOURCE_DIR}/spritetest.h)
 
 add_executable(game
-	main.cpp)
+	main.cpp
+	projectile.cpp projectile.h)
 
 
 
